--- a/index.html
+++ b/index.html
@@ -7,16 +7,42 @@
   </head>
   <body>
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+      
       <a-assets>
-        <img id="card" src="./cabeza-tigre-geometrica_62860-86.jpg" />
-        <a-asset-item id="avatarModel" src="./Tiger.glb"></a-asset-item>
+        <!-- Imagen del marcador -->
+        <img id="card" src="./marcador.jpg" />
+        <!-- Modelos 3D: reemplaza estos archivos con los tuyos -->
+        <a-asset-item id="model1" src="./modelo1.glb"></a-asset-item>
+        <a-asset-item id="model2" src="./modelo2.glb"></a-asset-item>
+        <a-asset-item id="model3" src="./modelo3.glb"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
       <a-entity mindar-image-target="targetIndex: 0">
+        <!-- Plano del marcador -->
         <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-        <a-gltf-model rotation="0.5 0.5 0.5 " position="0 0 1" scale="0.005 0.005 0.005" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+
+        <!-- Modelo 3D que se puede cambiar -->
+        <a-gltf-model id="avatarModel" rotation="0 0 0" position="0 0 0.5" scale="0.005 0.005 0.005"
+                      src="#model1" 
+                      animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+        </a-gltf-model>
       </a-entity>
     </a-scene>
-  </body>
+
+    <script>
+      // Lista de IDs de los modelos 3D
+      const modelos = ["#model1", "#model2", "#model3"];
+      let indice = 0;
+
+      const avatar = document.getElementById("avatarModel");
+
+      // Cambia de modelo al hacer clic sobre el modelo
+      avatar.addEventListener("click", () => {
+        indice = (indice + 1) % modelos.length;
+        avatar.setAttribute("src", modelos[indice]);
+      });
+    </script>
+  </body>
 </html>
