--- a/index.html
+++ b/index.html
@@ -17,27 +17,21 @@
         <a-asset-item id="model3" src="./Tiger3.glb"></a-asset-item>
       </a-assets>
 
-      <!-- Cámara con cursor para detectar clicks -->
+      <!-- Cámara con cursor -->
       <a-camera position="0 0 0" look-controls="enabled: false">
-        <a-cursor fuse="false" rayOrigin="mouse"></a-cursor>
+        <a-cursor id="cursor" fuse="false" rayOrigin="mouse"></a-cursor>
       </a-camera>
 
       <!-- Marcador y modelos -->
       <a-entity mindar-image-target="targetIndex: 0">
-        <!-- Imagen de referencia sobre el marcador -->
         <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
 
         <!-- Modelo 3D inicial -->
         <a-gltf-model id="avatarModel" src="#model1" position="0 0 1" scale="0.005 0.005 0.005"
                       rotation="0.5 0.5 0.5"
-                      animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+                      animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
+                      class="clickable">
         </a-gltf-model>
-
-        <!-- Plano invisible para detectar clicks -->
-        <a-plane id="clickPlane" position="0 0 1" width="0.6" height="0.6"
-                 material="opacity: 0; transparent: true"
-                 class="clickable">
-        </a-plane>
       </a-entity>
     </a-scene>
 
@@ -46,12 +40,15 @@
       let indice = 0;
 
       const avatar = document.getElementById("avatarModel");
-      const clickPlane = document.getElementById("clickPlane");
+      const cursor = document.getElementById("cursor");
 
-      // Cambiar modelo al tocar el plano invisible
-      clickPlane.addEventListener("click", () => {
-        indice = (indice + 1) % modelos.length;
-        avatar.setAttribute("gltf-model", modelos[indice]);
+      // Cambiar modelo cuando el cursor “clickea” el modelo
+      cursor.addEventListener("click", (evt) => {
+        const intersectedEl = evt.detail.intersectedEl;
+        if (intersectedEl && intersectedEl.id === "avatarModel") {
+          indice = (indice + 1) % modelos.length;
+          avatar.setAttribute("gltf-model", modelos[indice]);
+        }
       });
     </script>
   </body>
