--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
       <a-assets>
         <img id="card" src="./cabeza-tigre-geometrica_62860-86.jpg" />
-        <a-asset-item id="model1" src="./Tiger.glb"></a-asset-item>
-        <a-asset-item id="model2" src="./Tiger2.glb"></a-asset-item>
-        <a-asset-item id="model3" src="./Tiger3.glb"></a-asset-item>
+        <a-asset-item id="modelo1" src="./Tiger.glb"></a-asset-item>
+        <a-asset-item id="modelo2" src="./modelo1.glb"></a-asset-item>
+        <a-asset-item id="modelo3" src="./modelo2.glb"></a-asset-item>
       </a-assets>
 
       <!-- Cámara con cursor -->
@@ -27,7 +27,7 @@
         <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
 
         <!-- Modelo 3D inicial -->
-        <a-gltf-model id="avatarModel" src="#model1" position="0 0 1" scale="0.005 0.005 0.005"
+        <a-gltf-model id="avatarModel" src="#modelo1" position="0 0 1" scale="0.005 0.005 0.005"
                       rotation="0.5 0.5 0.5"
                       animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
                       class="clickable">
@@ -36,7 +36,7 @@
     </a-scene>
 
     <script>
-      const modelos = ["#model1", "#model2", "#model3"];
+      const modelos = ["#modelo1", "#modelo2", "#modelo3"];
       let indice = 0;
 
       const avatar = document.getElementById("avatarModel");
