--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
       <a-assets>
         <img id="card" src="./cabeza-tigre-geometrica_62860-86.jpg" />
-        <a-asset-item id="modelo1" src="./Tiger.glb"></a-asset-item>
-        <a-asset-item id="modelo2" src="./modelo1.glb"></a-asset-item>
-        <a-asset-item id="modelo3" src="./modelo2.glb"></a-asset-item>
+        <a-asset-item id="Tiger" src="./Tiger.glb"></a-asset-item>
+        <a-asset-item id="modelo1" src="./modelo1.glb"></a-asset-item>
+        <a-asset-item id="modelo2" src="./modelo2.glb"></a-asset-item>
+        <a-asset-item id="modelo3" src="./modelo3.glb"></a-asset-item>
       </a-assets>
 
       <!-- Cámara con cursor -->
@@ -22,32 +23,33 @@
         <a-cursor id="cursor" fuse="false" rayOrigin="mouse"></a-cursor>
       </a-camera>
 
-      <!-- Marcador y modelos -->
+      <!-- Marcador y modelos pre-cargados -->
       <a-entity mindar-image-target="targetIndex: 0">
         <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
 
-        <!-- Modelo 3D inicial -->
-        <a-gltf-model id="avatarModel" src="#modelo1" position="0 0 1" scale="0.005 0.005 0.005"
-                      rotation="0.5 0.5 0.5"
-                      animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
-                      class="clickable">
-        </a-gltf-model>
+        <!-- Modelos 3D pre-cargados, solo Tiger visible inicialmente -->
+        <a-gltf-model id="Tiger" src="#Tiger" position="0 0 1" scale="0.005 0.005 0.005" rotation="0.5 0.5 0.5" visible="true"></a-gltf-model>
+        <a-gltf-model id="modelo1" src="#modelo1" position="0 0 1" scale="0.005 0.005 0.005" rotation="0.5 0.5 0.5" visible="false"></a-gltf-model>
+        <a-gltf-model id="modelo2" src="#modelo2" position="0 0 1" scale="0.005 0.005 0.005" rotation="0.5 0.5 0.5" visible="false"></a-gltf-model>
+        <a-gltf-model id="modelo3" src="#modelo3" position="0 0 1" scale="0.005 0.005 0.005" rotation="0.5 0.5 0.5" visible="false"></a-gltf-model>
       </a-entity>
     </a-scene>
 
     <script>
-      const modelos = ["#modelo1", "#modelo2", "#modelo3"];
+      // Lista de modelos (ids)
+      const modelos = ["Tiger", "modelo1", "modelo2", "modelo3"];
       let indice = 0;
 
-      const avatar = document.getElementById("avatarModel");
       const cursor = document.getElementById("cursor");
 
-      // Cambiar modelo cuando el cursor “clickea” el modelo
       cursor.addEventListener("click", (evt) => {
         const intersectedEl = evt.detail.intersectedEl;
-        if (intersectedEl && intersectedEl.id === "avatarModel") {
+        if (intersectedEl && modelos.includes(intersectedEl.id)) {
+          // Ocultar modelo actual
+          document.getElementById(modelos[indice]).setAttribute("visible", "false");
+          // Siguiente modelo
           indice = (indice + 1) % modelos.length;
-          avatar.setAttribute("gltf-model", modelos[indice]);
+          document.getElementById(modelos[indice]).setAttribute("visible", "true");
         }
       });
     </script>
