--- a/index.html
+++ b/index.html
@@ -21,35 +21,35 @@
         <a-asset-item id="modelo3" src="./modelo3.glb"></a-asset-item>
       </a-assets>
 
-      <!-- Cámara con cursor para detectar taps/clicks -->
+      <!-- Cámara con cursor compatible móvil y escritorio -->
       <a-camera position="0 0 0" look-controls="enabled: false">
-        <a-cursor fuse="false" rayOrigin="mouse"></a-cursor>
+        <a-cursor id="cursor" fuse="false" rayOrigin="cursor"></a-cursor>
       </a-camera>
 
       <!-- Marcador y modelos pre-cargados -->
-      <a-entity mindar-image-target="targetIndex: 0">
-        <!-- Imagen de referencia sobre el marcador -->
-        <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+      <a-entity mindar-image-target="targetIndex: 0" id="marker">
+        <!-- Imagen de referencia -->
+        <a-plane src="#card" position="0 0 0" height="0.552" width="1"></a-plane>
 
-        <!-- Todos los modelos cargados desde el inicio -->
+        <!-- Modelos cargados desde el inicio -->
         <a-gltf-model id="Tiger" src="#Tiger" position="0 0 1" scale="0.005 0.005 0.005" rotation="0.5 0.5 0.5" visible="true"></a-gltf-model>
         <a-gltf-model id="modelo1" src="#modelo1" position="0 0 1" scale="0.005 0.005 0.005" rotation="0.5 0.5 0.5" visible="false"></a-gltf-model>
         <a-gltf-model id="modelo2" src="#modelo2" position="0 0 1" scale="0.005 0.005 0.005" rotation="0.5 0.5 0.5" visible="false"></a-gltf-model>
         <a-gltf-model id="modelo3" src="#modelo3" position="0 0 1" scale="0.005 0.005 0.005" rotation="0.5 0.5 0.5" visible="false"></a-gltf-model>
 
-        <!-- Plano invisible para recibir taps/clicks -->
-        <a-plane id="clickPlane" position="0 0 1" width="0.8" height="0.8" material="opacity:0; transparent:true" class="clickable"></a-plane>
+        <!-- Plano invisible adelantado para recibir taps -->
+        <a-plane id="clickPlane" position="0 0 1.01" width="0.8" height="0.8"
+                 material="opacity:0; transparent:true"></a-plane>
       </a-entity>
     </a-scene>
 
     <script>
-      // Lista de modelos (ids de <a-gltf-model>)
       const modelos = ["Tiger", "modelo1", "modelo2", "modelo3"];
       let indice = 0;
 
       const clickPlane = document.getElementById("clickPlane");
 
-      // Cambiar modelo al tocar el plano invisible
+      // Alternar modelos al tocar el plano invisible
       clickPlane.addEventListener("click", () => {
         // Ocultar modelo actual
         document.getElementById(modelos[indice]).setAttribute("visible", "false");
